<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo5"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_main"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Creacion Personaje"></androidx.appcompat.widget.Toolbar>



    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/nombre"
        android:inputType="text"
        android:padding="15dp"
        android:textAlignment="center"/>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:srcCompat="@drawable/ic_launcher_background" />

    <RelativeLayout
        android:layout_width="369dp"
        android:layout_height="306dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/fondo5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/escoge_la_clase"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <Spinner

            android:id="@+id/spinner_clase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginRight="250dp"
            android:background="@android:color/holo_orange_light"
            android:entries="@array/clase"
            android:padding="15dp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/escoge_la_raza"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinner_raza"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginRight="250dp"
            android:background="@android:color/holo_orange_light"
            android:entries="@array/raza"
            android:padding="15dp"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/escoge_la_edad"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinner_edad"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/holo_orange_light"
            android:entries="@array/EstadoVital"
            android:padding="15dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/boton_siguiente"
            android:layout_width="148dp"
            android:layout_height="48dp"
            android:layout_below="@+id/spinner_edad"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="51dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="87dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/siguiente"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="5dp" />
    </RelativeLayout>

</LinearLayout>